--- a/contacts.html
+++ b/contacts.html
@@ -15,81 +15,94 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" id="logo-name" href="#">
-            Aleks Kimball-Moreno
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="contacts.html">
-                        Contact
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">
-                        Portfolio
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">
-                        About Me
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <main class="container">
-        <section class="row">
-            <div class="col-md-8">
-                <section class="jumbotron">
-                    <h1 class="display-4">
-                        Contact
-                    </h1>
-                    <hr class="my-4">
-                    <div class="col-8">
-                        <form>
-                            <div class="form-group">
-                                <label for="name">
-                                    Name
-                                </label>
-                                <input type="text" class="form-control" placeholder="Name" id="usr">
-                            </div>
-                            <div class="form-group">
-                                <label for="email">
-                                    Email
-                                </label>
-                                <input type="email" class="form-control" placeholder="Email" id="email">
-                            </div>
-                            <div class="form-group">
-                                <label for="message">
-                                    Send A Message
-                                </label>
-                                <textarea class="form-control" rows="3" placeholder="How can I help you?"
-                                    id="comment"></textarea>
-                            </div>
-                        </form>
-                        <p class="lead">
-                            <a class="btn btn-primary btn-lg" href="#" role="button">
-                                Submit
-                            </a>
-                        </p>
-                    </div>
-                </section>
+    <div class="wallpaper">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" id="logo-name" href="#">
+                Aleks Kimball-Moreno
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">
+                            About Me
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">
+                            Portfolio
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/vantango" target="_blank">
+                            GitHub
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/in/aleksandr-kimball-moreno-a7026850/"
+                            target="_blank">
+                            LinkedIn
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="contacts.html">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
             </div>
-        </section>
-    </main>
+        </nav>
+
+        <main class="container">
+            <section class="row">
+                <div class="col-md-8">
+                    <section class="jumbotron">
+                        <h1 class="display-4">
+                            Contact
+                        </h1>
+                        <hr class="my-4">
+                        <div class="col-8">
+                            <form>
+                                <div class="form-group">
+                                    <label for="name">
+                                        Name
+                                    </label>
+                                    <input type="text" class="form-control" placeholder="Name" id="usr">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">
+                                        Email
+                                    </label>
+                                    <input type="email" class="form-control" placeholder="Email" id="email">
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">
+                                        Send A Message
+                                    </label>
+                                    <textarea class="form-control" rows="3" placeholder="How can I help you?"
+                                        id="comment"></textarea>
+                                </div>
+                            </form>
+                            <p class="lead">
+                                <a class="btn btn-primary btn-lg" href="#" role="button">
+                                    Submit
+                                </a>
+                            </p>
+                        </div>
+                    </section>
+                </div>
+            </section>
+        </main>
+    </div>
     <footer class="footer">
         <p class="text-center text-muted">
-            <a class="socials" href="https://github.com/vantango" target="_blank">GitHub</a>
-            &copy; Copyright
-            <a class="socials" href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/"
-                target="_blank">LinkedIn</a>
+            <!-- <a class="socials" href="https://github.com/vantango" target="_blank">GitHub</a> -->
+            &copy; Copyright 2021
+            <!-- <a class="socials" href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/"
+                target="_blank">LinkedIn</a> -->
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
