--- a/index.html
+++ b/index.html
@@ -15,49 +15,61 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" id="logo-name" href="#">
-            Aleks Kimball-Moreno
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="contacts.html">
-                        Contact
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">
-                        Portfolio
-                    </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">
-                        About Me
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div class="wallpaper">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" id="logo-name" href="#">
+                Aleks Kimball-Moreno
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">
+                            About Me
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">
+                            Portfolio
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/vantango" target="_blank">
+                            GitHub
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/in/aleksandr-kimball-moreno-a7026850/"
+                            target="_blank">
+                            LinkedIn
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacts.html">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-    <main class="container">
-        <section class="row">
-            <div class="col-md-8">
-                <section class="jumbotron">
-                    <h1 class="display-4">
-                        About Me
-                    </h1>
-                    <hr class="my-4">
-                    <div class="row">
-                        <div class="col-8 col-10">
-                            <img src=https://i.ibb.co/pjDhvkC/IMG-20200121-161722-203.jpg/500/600"
-                                class="img-responsive" alt="picture-of-aleks">
-                            <p>
-                                My name is Aleks Kimball-Moreno and I am currently a student in the Full Stack Web
+        <main class="container">
+            <section class="row">
+                <div class="col-md-8">
+                    <section class="jumbotron">
+                        <h1 class="display-4">
+                            About Me
+                        </h1>
+                        <hr class="my-4">
+                        <div class="row">
+                            <div class="col-8 col-10">
+                                <img src="https://media-exp1.licdn.com/dms/image/C5603AQFYRkBfcnElgA/profile-displayphoto-shrink_200_200/0/1609885611907?e=1615420800&v=beta&t=QDQ5EV3UPe-2TB8MKyEWHY_BfjubdWGkFlj4wuI1mG4"
+                                    class="img-responsive" alt="picture-of-aleks">
+                                <p>
+                                    <!-- I am currently a student in the Full Stack Web
                                 Development
                                 boot
                                 camp at
@@ -67,28 +79,43 @@
                                 and
                                 previously
                                 worked in the automotive industry. I currently live in Seattle, WA and am developing my
-                                skills in HTML, CSS, Bootstrap, and more.
-                            </p>
-                            <p>
-                                I enjoy a number of hobbies and activities in my free time. I've been a DJ for
+                                skills in HTML, CSS, Bootstrap, and more. -->
+                                    I am an aspiring full stack web developer currently enrolled in the Web Development
+                                    Boot
+                                    Camp at University of Washington. Combining my background in the automotive industry
+                                    with my newfound skills in JavaScript, jQuery, HTML, and CSS, I want to create
+                                    innovative and engaging applications that provide a high-quality user experience
+                                    with
+                                    lightweight and efficient deployments.
+                                </p>
+                                <p>
+                                    <!-- I enjoy a number of hobbies and activities in my free time. I've been a DJ for
                                 nearly 10
                                 years and have played at venues all over the city.
                                 I love to go hiking, backpacking, camping, off-roading in my Subaru, snowboarding,
                                 mountain
-                                biking, going to music festivals, and traveling internationally.
-                            </p>
+                                biking, going to music festivals, and traveling internationally. -->
+                                    I am a highly motivated self-starter with a
+                                    proven track record in fast paced, team-focused environments. I am constantly
+                                    seeking to
+                                    leverage my keen communication abilities to take on new challenges while learning
+                                    and
+                                    developing new skill sets.
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                </section>
-            </div>
-        </section>
-    </main>
+                    </section>
+                </div>
+            </section>
+
+        </main>
+    </div>
     <footer class="footer">
         <p class="text-center text-muted">
-            <a class="socials" href="https://github.com/vantango" target="_blank">GitHub</a>
-            &copy; Copyright
-            <a class="socials" href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/"
-                target="_blank">LinkedIn</a>
+            <!-- <a class="socials" href="https://github.com/vantango" target="_blank">GitHub</a> -->
+            &copy; Copyright 2021
+            <!-- <a class="socials" href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/"
+                target="_blank">LinkedIn</a> -->
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
