--- a/contacts.html
+++ b/contacts.html
@@ -48,8 +48,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href=""
-                            target="_blank">
+                        <a class="nav-link"
+                            href="https://github.com/vantango/my-portfolio-v1/blob/main/Assets/Images/Resume%20FINALIZED%20(1-7-21).pdf"
+                            download>
                             Resume
                         </a>
                     </li>
@@ -64,13 +65,13 @@
 
         <main class="container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-12">
                     <section class="jumbotron">
                         <h1 class="display-4">
                             Contact
                         </h1>
                         <hr class="my-4">
-                        <div class="col-8">
+                        <div class="col-12">
                             <form>
                                 <div class="form-group">
                                     <label for="name">
@@ -92,12 +93,25 @@
                                         id="comment"></textarea>
                                 </div>
                             </form>
-                            <p class="lead">
-                                <a class="btn btn-primary btn-lg" href="#" role="button">
-                                    Submit
-                                </a>
-                            </p>
+                            <div class="row">
+                                <div class="col-2">
+                                    <p class="lead">
+                                        <a class="btn btn-primary btn-lg" href="#" role="button">
+                                            Submit
+                                        </a>
+                                    </p>
+                                </div>
+                                <div class="col-4">
+                                    <p>Phone: 253-797-1533</p>
+                                </div>
+                                <div class="col-6">
+                                    <p>Email: <a href="mailto:alekskimball@gmail.com">alekskimball@gmail.com</a></p>
+                                </div>
+                            </div>
                         </div>
+                        <!-- <div class="row">
+                            
+                        </div> -->
                     </section>
                 </div>
             </div>
