--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link"
+                            href="https://github.com/vantango/my-portfolio-v1/blob/main/Assets/Images/Resume%20FINALIZED%20(1-7-21).pdf"
+                            download>
+                            Resume
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contacts.html">
                             Contact
                         </a>
